Updated through rs script

--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -54,4 +54,4 @@ block content
 
           option(value='Videogames') Videogames
     div
-      button(type='submit') Express yourself
+      button.btn(type='submit') Express yourself
