--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -47,4 +47,4 @@ block comment
         required title='must be 3-10000 characters'
       )
     div
-      button(type='submit') Comment
+      button.btn(type='submit') Comment
