--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -249,6 +249,7 @@ p.dot {
 .btn {
   rgba(244,139,194,0)
   font-size: 18px;
+  padding: 3px;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: background-color, border-radius;
