--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -200,6 +200,8 @@ td, tr {
   padding: 15px;
 }
 
+
+
 ul {
   /*list-style-type: none;
   display: inline;*/
@@ -246,6 +248,30 @@ p.dot {
   background: rgba(250,180,135,1);
 }
 
+.sub {
+
+}
+
+.name {
+
+}
+
+.title {
+
+}
+
+.comnum {
+
+}
+
+.views {
+
+}
+
+.mdate {
+
+}
+
 .select {
   display: inline;
 }
@@ -263,4 +289,50 @@ p.dot {
 .btn:hover{
   background: rgb(40, 199, 141);
   border-radius: 10px;
+}
+
+input[type=checkbox] {
+  position: absolute;
+  left: -9999px;
+
+}
+
+label {
+  background: url(/images/search.png) no-repeat;
+  display: inline-block;
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  margin-top: 11px;
+  margin-right: 15px;
+}
+
+
+.image{
+  float: right;
+  display: inline-block;
+  float: right;
+  height: 81px;
+  vertical-align: middle;
+}
+
+.search {
+  text-align: center;
+  display: inline-block;
+  height: 21px;
+  width: 250px;
+  margin-top: 30px;
+  margin-right: 20px;
+  vertical-align: middle;
+  float: left;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4  s;
+  -webkit-transition-property: visibility, opacity, margin-right;
+  transition-property: visibility, opacity, margin-right;
+}
+
+input[type=checkbox]:not(:checked) ~ .search{
+  visibility: hidden;
+  opacity: 0;
+  margin-right: 0px;
 }
