Updated through rs script

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -252,19 +252,21 @@ p.dot {
 }
 
 .title {
-
+  width: 350px;
 }
 
 .comnum {
   text-align: right;
+  width: 100px;
 }
 
 .views {
   text-align: right;
+  width: 59px;
 }
 
 .mdate {
-
+  width: 160px;
 }
 
 .select {
