Updated through rs script

--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -6,7 +6,7 @@ block content
   table.search
     tboddy
       each result in results
-        tr
+        tr.search
           td.search1
             h2= result.name
             p= result.date
