--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -295,7 +295,7 @@ input[type=checkbox] {
 }
 
 label {
-  background: url(/images/search.png) no-repeat;
+  background: url(/images/search2.png) no-repeat;
   display: inline-block;
   cursor: pointer;
   width: 60px;
