--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -28,27 +28,54 @@ block content
         -i = 0
         each thread in threads
           -id = '/threadid=' + JSON.stringify(thread.id) + '&page=0'
-          tr
-            if title == 'Front'
+          if i == 0
+            - i++
+            tr.colorRow
+              if title == 'Front'
+                td
+                  form(method='get' action=id)
+                    button.sub(type='submit')= thread.sub
               td
                 form(method='get' action=id)
-                  button.sub(type='submit')= thread.sub
-            td
-              form(method='get' action=id)
-                button.name(type='submit')= thread.name
-            td
-              form(method='get' action=id)
-                button.title(type='submit')= thread.title
-            td
-              form(method='get' action=id)
-                button.comnum(type='submit')= thread.comnum
-            td
-              form(method='get' action=id)
-                button.views(type='submit')= thread.views
-            -date = '' + thread.mdate
-            -date = date.slice(0,-18)
-            td
-              form(method='get' action=id)
-                button.mdate(type='submit')= date
+                  button.name(type='submit')= thread.name
+              td
+                form(method='get' action=id)
+                  button.title(type='submit')= thread.title
+              td
+                form(method='get' action=id)
+                  button.comnum(type='submit')= thread.comnum
+              td
+                form(method='get' action=id)
+                  button.views(type='submit')= thread.views
+              -date = '' + thread.mdate
+              -date = date.slice(0,-18)
+              td
+                form(method='get' action=id)
+                  button.mdate(type='submit')= date
+          else
+
+            - i--
+            tr
+              if title == 'Front'
+                td
+                  form(method='get' action=id)
+                    button.sub(type='submit')= thread.sub
+              td
+                form(method='get' action=id)
+                  button.name(type='submit')= thread.name
+              td
+                form(method='get' action=id)
+                  button.title(type='submit')= thread.title
+              td
+                form(method='get' action=id)
+                  button.comnum(type='submit')= thread.comnum
+              td
+                form(method='get' action=id)
+                  button.views(type='submit')= thread.views
+              -date = '' + thread.mdate
+              -date = date.slice(0,-18)
+              td
+                form(method='get' action=id)
+                  button.mdate(type='submit')= date
 
   br
