--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -242,6 +242,10 @@ p.dot {
   background: rgba(250,180,135,1);
 }
 
+thead {
+  border-bottom: rgba(250,180,135,1)
+}
+
 .sub, .name, .title, .comnum, .views, .mdate{
   font-size: 14px;
   height: 48px;
