--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -285,7 +285,7 @@ thead {
 .btn {
   background: rgba(244,139,194,0);
   font-size: 18px;
-  padding: 3px;
+  width: 100%;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: background-color, border-radius;
