--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,7 +5,7 @@ block content
     br
     table
       thead
-        tr
+        tr.thead
           if title == 'Front'
             th
               button.noClick Category
