--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -3,13 +3,38 @@ extends pages
 block content
   h1 Search results for: !{searched}.
   hr
-  table.search
-    tboddy
-      each result in results
-        tr.search
-          td.search1
-            h2= result.name
-            p= result.date
-          td.search2
-            h1= result.title
-            p !{result.paragraph}
+  .table
+    table
+      tboddy
+        - i = 0
+        each result in results
+          -id = '/threadid=' + JSON.stringify(result.threadid) + '&page=0'
+          if i == 0
+            - i++
+            tr.colorRow
+              td
+                form(method='get' action=id)
+                  button.name(type='submit')= result.name
+              td
+                form(method='get' action=id)
+                  button.title(type='submit') !{result.title} !{'<br />'} !{result.paragraph}
+              -date = '' + result.date
+              -date = date.slice(0,-18)
+              td
+                form(method='get' action=id)
+                  button.mdate(type='submit')= date
+          else
+
+            - i--
+            tr
+              td
+                form(method='get' action=id)
+                  button.name(type='submit')= result.name
+              td
+                form(method='get' action=id)
+                  button.title(type='submit') !{result.title} !{'<br />'} !{result.paragraph}
+              -date = '' + result.mdate
+              -date = date.slice(0,-18)
+              td
+                form(method='get' action=id)
+                  button.mdate(type='submit')= date
