Updated through rs script

--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -5,10 +5,10 @@ td.search {
   text-overflow: ellipsis;
 }
 
-td.search.1 {
+td.search.einn {
   width: 66%;
 }
 
-td.search.2 {
+td.search.tveir {
   width: 33%;
 }
