Updated through rs script

--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -4,7 +4,7 @@ block content
   h1 Search results for: !{searched}.
   hr
   .table
-    table
+    table.search
       tboddy
         - i = 0
         each result in results
