Updated through rs script

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,7 +3,7 @@ extends pages
 block content
   .table
     br
-    table
+    table.indexTable
       thead
         tr.thead
           if title == 'Front'
