--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -244,6 +244,11 @@ p.dot {
   background: rgba(250,180,135,1);
 }
 
+.indexTable {
+  width: 100%;
+  max-width: 1000px;
+}
+
 .thead {
   border-bottom: rgba(250,180,135,1)
 }
