--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -7,10 +7,16 @@ td.search {
 
 td.search.einn {
   width: inherit;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 td.search.tveir {
   width: inherit;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 table.search {
