--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -5,22 +5,38 @@ td.search {
   text-overflow: ellipsis;
 }
 
-td.search.einn {
-  width: inherit;
-  white-space: nowrap;
+button.search.name{
+  cursor: pointer;
+  font-size: 14px;
+  min-height: 48px;
+  padding: 0 4px;
   overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-td.search.tveir {
-  width: inherit;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-table.search {
   width: 100%;
-  max-width: 1000px;
-  margin: auto;
+}
+
+button.search.date{
+  cursor: pointer;
+  font-size: 14px;
+  min-height: 48px;
+  padding: 0 4px;
+  overflow: hidden;
+  width: 100%;
+}
+
+button.search.title{
+  cursor: pointer;
+  font-size: 14px;
+  min-height: 48px;
+  padding: 0 4px;
+  overflow: hidden;
+  width: 100%;
+}
+
+button.search.para{
+  cursor: pointer;
+  font-size: 14px;
+  min-height: 48px;
+  padding: 0 4px;
+  overflow: hidden;
+  width: 100%;
 }
