--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -27,7 +27,7 @@ button.search.title{
   cursor: pointer;
   font-size: 14px;
   min-height: 48px;
-  padding: 0 4px;
+  padding: 0;
   overflow: hidden;
   width: 70%;
 }
@@ -36,7 +36,7 @@ button.search.para{
   cursor: pointer;
   font-size: 14px;
   min-height: 48px;
-  padding: 0 4px;
+  padding: 0;
   overflow: hidden;
   width: 70%;
 }
