--- a/src/public/stylesheets/style0.css
+++ b/src/public/stylesheets/style0.css
@@ -9,7 +9,7 @@ button.search.name{
   cursor: pointer;
   font-size: 14px;
   min-height: 48px;
-  padding: 0 4px;
+  padding: 0;
   text-overflow: ellipsis;
   width: 30%;
 }
@@ -18,7 +18,7 @@ button.search.date{
   cursor: pointer;
   font-size: 14px;
   min-height: 48px;
-  padding: 0 4px;
+  padding: 0;
   text-overflow: ellipsis;
   width: 30%;
 }
