--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -4,7 +4,7 @@ block content
   h1 Search results for: !{searched}.
   hr
   .table
-    table.search
+    table.searched
       tboddy
         - i = 0
         each result in results
@@ -14,20 +14,20 @@ block content
           if i == 0
             - i++
             tr.colorRow
-              td.search
+              td.searched
                 form(method='get' action=id)
-                  button.search.name(type='submit') !{result.name}
-                  button.search.date(type='submit') !{date}
-              td.search
+                  button.searched.name(type='submit') !{result.name}
+                  button.searched.date(type='submit') !{date}
+              td.searched
                 form(method='get' action=id)
-                  button.search.title(type='submit') !{result.title}
-                  button.search.para(type='submit') !{result.paragraph}
+                  button.searched.title(type='submit') !{result.title}
+                  button.searched.para(type='submit') !{result.paragraph}
           else
             - i--
             tr
-              td.search.einn
+              td.searched.einn
                 form(method='get' action=id)
                   button.name(type='submit') !{result.name} !{'<br />'} !{date}
-              td.search.tveir
+              td.searched.tveir
                 form(method='get' action=id)
                   button.title(type='submit') !{result.title} !{'<br />'} !{result.paragraph}
