Updated through rs script

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -262,15 +262,16 @@ p.dot {
   width: 100%;
 }
 
-
 .btn-title {
   text-align: left;
 }
 
+.sub {
+  max-width: 105px;
+}
 .name{
   max-width: 170px;
 }
-
 .title{
   max-width: 350px;
 }
