--- a/src/views/menu.pug
+++ b/src/views/menu.pug
@@ -32,7 +32,7 @@ block menu
     .newThreadDiv
       -blah = '/newThread&'+title
       a(href=blah)
-        button.menuBtn.newThread(type='submit') New Thread
+        button.menuBtn.newThreadBtn(type='submit') New Thread
 
     .image
       label(for='toggle-1')
