Updated through rs script

--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -15,24 +15,24 @@ block content
             - i++
             tr.colorRow
               td.searched
-                form.searched(method='get' action=id)
+                form.searchedeitt(method='get' action=id)
                   button.searched.name(type='submit') !{result.name}
                   br
                   button.searched.date(type='submit') !{date}
               td.searched
-                form.searched(method='get' action=id)
+                form.searchedtvo(method='get' action=id)
                   button.searched.title(type='submit') !{result.title}
                   button.searched.para(type='submit') !{result.paragraph}
           else
             - i--
             tr
               td.searched
-                form(method='get' action=id)
+                form.searchedeitt(method='get' action=id)
                   button.searched.name(type='submit') !{result.name}
                   br
                   button.searched.date(type='submit') !{date}
               td.searched
-                form(method='get' action=id)
+                form.searchedtvo(method='get' action=id)
                   button.searched.title(type='submit') !{result.title}
                   br
                   button.searched.para(type='submit') !{result.paragraph}
