Updated through rs script

--- a/src/public/stylesheets/searchtable.css
+++ b/src/public/stylesheets/searchtable.css
@@ -48,10 +48,10 @@ button.searched.para{
   width: 100%;
 }
 
-form.searchedeitt {
+form.searched.name {
 
 }
 
-form.searchedtvo {
-  
+form.searched.name {
+
 }
