--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -13,6 +13,13 @@ button, textarea, input {
   background: transparent;
 }
 
+input {
+  font-size: 16px;
+}
+textarea {
+  font-size: 14px;
+}
+
 .center {
   text-align: center;
 }
