Updated through rs script

--- a/src/views/newthread.pug
+++ b/src/views/newthread.pug
@@ -2,7 +2,7 @@ extends menu
 
 block content
   div.newThread
-    h1 New Thread
+    h1.center New Thread
 
     form(method='post' action='/newthread')
       div
