--- a/src/public/stylesheets/searchtable.css
+++ b/src/public/stylesheets/searchtable.css
@@ -3,6 +3,7 @@ table.searched {
 }
 
 .searched.name{
+  text-align: center;
   cursor: pointer;
   font-size: 18px;
   height: 20px;
@@ -15,6 +16,7 @@ table.searched {
 }
 
 .searched.date{
+  text-align: center;
   cursor: pointer;
   font-size: 14px;
   height: 80px;
@@ -26,6 +28,7 @@ table.searched {
 }
 
 .searched.title{
+  text-align: center;
   cursor: pointer;
   font-size: 22px;
   font-weight: bold;
@@ -38,6 +41,7 @@ table.searched {
 }
 
 .searched.para{
+  text-align: left;
   cursor: pointer;
   font-size: 14px;
   height: 78px;
